osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_require/test_validates_for_nonexistent_rule_fstring.txt
error: required rule: `actions/{ActionName}.sml` would never match any rule files
--> main.sml:3:13
     |
   3 | Require(rule=f'actions/{ActionName}.sml')
     |              ^ require attempted here, glob: `actions/*.sml` matches no sources